[package]
authors = ["Ben Wishovich <ben@benw.is>"]
edition = "2021"
license = "MIT"
name = "examples"
publish = false
version = "0.1.0"

[[bin]]
name = "basic"
path = "src/basic.rs"

[[bin]]
name = "custom-key-bearer"
path = "src/custom_key_bearer.rs"



[dependencies]
axum = "0.5.16"
tower_governor={path="../", features=["tracing"]}
tokio = { version = "1.21.2", features = ["full"] }
tracing = {version="0.1.37", features=["attributes"]}
tracing-subscriber = "0.3"



