[package]
authors = ["Ben Wishovich <ben@benw.is>"]
edition = "2021"
license = "MIT"
name = "examples"
publish = false
version = "0.1.0"

[[bin]]
name = "basic"
path = "src/basic.rs"

[[bin]]
name = "custom_key_bearer"
path = "src/custom_key_bearer.rs"



[dependencies]
axum = "0.5.16"
tower_governor={path="../", features=["tracing"]}
tokio = { version = "1.21.2", features = ["full"] }
tracing = {version="0.1.37", features=["attributes"]}
tracing-subscriber = "0.3"
tower = "0.4.13"
serde = { version = "1.0.145", features = ["derive"] }
http = "0.2.8"
governor = "0.5.0"



