[package]
authors = ["Ben Wishovich <ben@benw.is>"]
edition = "2021"
license = "MIT"
name = "examples"
publish = false
version = "0.1.0"

[[bin]]
name = "basic"
path = "src/basic.rs"

[[bin]]
name = "custom_key_bearer"
path = "src/custom_key_bearer.rs"



[dependencies]
axum = "0.7"
tower_governor={path="../", features=["tracing"]}
tokio = { version = "1.23.0", features = ["full"] }
tracing = {version="0.1.37", features=["attributes"]}
tracing-subscriber = "0.3"
tower = "0.5.1"
serde = { version = "1.0.149", features = ["derive"] }
http = "1.0.0"
governor = "0.7.0"
